--- a/implementacao/BuckStar/WebContent/css/alex.css
+++ b/implementacao/BuckStar/WebContent/css/alex.css
@@ -96,6 +96,7 @@ input[type=tel],
 input[type=email],
 input[type=datetime],
 input[type=url],
+textarea,
 select{
 	background-color: #FFF;
 	border:1px solid #aaa;
@@ -107,6 +108,7 @@ select{
 	color: #535353;
 	overflow-x: auto;
 	overflow-y: hidden;
+	resize: none;
 }
 
 input[type=text]:hover,
@@ -115,6 +117,7 @@ input[type=tel]:hover,
 input[type=email]:hover,
 input[type=datetime]:hover,
 input[type=url]:hover,
+textarea:hover,
 select:hover{
 	border-color: #66afe9;
 	transition: border-color 0.3s ease 0s;
@@ -126,6 +129,7 @@ input[type=tel]:focus,
 input[type=email]:focus,
 input[type=datetime]:focus,
 input[type=url]:focus,
+textarea:focus,
 select:focus{
 	outline:none; /* Pour enlever le contour jaune lorsque l'on sélectionne un input dans Chrome */
 	border-color: #66afe9;
@@ -178,6 +182,11 @@ input[type=checkbox] label{
   	transition: background-color 0.5s ease 0s;
 }
 
+.monetario{
+	border-radius: 0 4px 4px 0 !important;
+	width: 100% !important;	
+}
+
 .active2{
 	margin-left: 10px;
 }
@@ -185,6 +194,7 @@ input[type=checkbox] label{
 .tabela{
 	overflow-x: auto;
 	overflow-y: hidden;
+	white-space: nowrap;
 }
 
 img_table{
@@ -260,4 +270,27 @@ fieldset input[type=text]:nth-child(2){
 .img_carrousel{
 	display: block; 
 	margin: auto; 
+}
+
+/* Largura da barra de rolagem */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Fundo da barra de rolagem */
+::-webkit-scrollbar-track-piece {
+    background-color: #EEE;
+    border-left: 1px solid #CCC
+}
+
+/* Cor do indicador de rolagem */
+::-webkit-scrollbar-thumb:vertical,
+::-webkit-scrollbar-thumb:horizontal {
+    background-color: #BAC0C4
+}
+
+/* Cor do indicador de rolagem - ao passar o mouse */
+::-webkit-scrollbar-thumb:vertical:hover,
+::-webkit-scrollbar-thumb:horizontal:hover {
+    background-color: #717171
 }
