--- a/implementacao/BuckStar/WebContent/css/alex.css
+++ b/implementacao/BuckStar/WebContent/css/alex.css
@@ -8,24 +8,12 @@ body{
 	font-family:Arial,sans-serif;
 	font-size:12px;
 	line-height:16px;
-	/*text-shadow:0 1px 0 #fff;*/
 }
+
 a{
 	color:#333;
 	text-decoration:underline;
 }
-/*
-form{
-	background:#f7f7f7;
-	background:-moz-linear-gradient(90deg, #ccc, #fff); /* Firefox */
-	/*background:-webkit-gradient(linear, left top, left bottom, from(#fff), to(#ccc)); /* Webkit */
-	/*border:1px solid #aaa;
-	border-radius:10px;
-	box-shadow:0 0 15px #aaa;
-	margin:15px auto 0;
-	padding:20px;
-
-}*/
 
 div.produtos{
 	margin: 15px 0 15px 0;
@@ -54,8 +42,6 @@ form.padrao{
 	display: block;
 	max-width:60%;
 	margin: 0 auto;
-	/*margin-left: 2%;
-	margin-right: 2%;*/	
 }
 
 label.tt{
@@ -69,10 +55,6 @@ label.tt{
 
 form label{
 	cursor:pointer;
-	/*display:block;
-	float:left;
-	width:220px;	
-	*/
 	font-size:10px;
 	font-weight:bold;
 	line-height:28px;
@@ -83,7 +65,7 @@ form label{
 form p{
 	margin-bottom:20px;
 }
-form p:last-child{ /* Sélecteur avancé pour sélectionner le dernier paragraphe du formulaire */
+form p:last-child{
 	margin-bottom:0;
 }
 
@@ -157,7 +139,7 @@ input[type=url]:focus,
 input[type=number]:focus,
 textarea:focus,
 select:focus{
-	outline:none; /* Pour enlever le contour jaune lorsque l'on sélectionne un input dans Chrome */
+	outline:none;
 	border-color: #66afe9;
 	outline: 0;
 	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(102, 175, 233, .6);
@@ -193,11 +175,6 @@ input[type=checkbox] label{
 	background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
 }
-
-/*.padrao{
-	margin-left: 2%;
-	margin-right: 2%;
-}*/
 
 .salvar{
 	margin-top: 20px;
@@ -306,17 +283,17 @@ fieldset input[type=text]:nth-child(2){
 /* Fundo da barra de rolagem */
 ::-webkit-scrollbar-track-piece {
     background-color: #EEE;
-    border-left: 1px solid #CCC
+    border-left: 1px solid #CCC;
 }
 
 /* Cor do indicador de rolagem */
 ::-webkit-scrollbar-thumb:vertical,
 ::-webkit-scrollbar-thumb:horizontal {
-    background-color: #BAC0C4
+    background-color: #BAC0C4;
 }
 
 /* Cor do indicador de rolagem - ao passar o mouse */
 ::-webkit-scrollbar-thumb:vertical:hover,
 ::-webkit-scrollbar-thumb:horizontal:hover {
-    background-color: #717171
+    background-color: #717171;
 }
